# pyqt-mvc-w-designer

./: .gitignore  LICENSE  README.md  build_package.py  requirements.txt  setup.cfg
src/: example_gui.py
src/pyqt_mvc_w_designer/: Abstract_Ctrlr.py  Callback_Log_Handler.py  Example_Ctrlr.py  GUI_Runner.py  Main_Win_Ctrlr.py  Mpl_Canvas.py  Mpl_Ctrlr.py  example.py  ui.py
src/pyqt_mvc_w_designer/ui/: example_widg.ui  main_window.ui  mpl_widg.ui  test_data_file.txt
