[metadata]
name = pyqt-mvc-w-designer
version = 1.0.4
author = Ryan Gill
author_email = ryansoftwaredev@gmail.com
description = Framework for the Model-View-Controller GUI pattern using PyQt with Qt Designer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rgill02/pyqt-mvc-w-designer
project_urls =
	Bug Tracker = https://github.com/rgill02/pyqt-mvc-w-designer/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.10
install_requires =
	numpy
	matplotlib
	PyQt5

[options.packages.find]
where = src